2024-04-16T08:11:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8702173265 # 187
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 784 1246
* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 785 1247
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-16]

2024-04-16T00:37:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8698071514 # 186
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 783 1245
* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 784 1246
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-15]

2024-04-15T03:06:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8682623066 # 183
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 782 1244
* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 783 1245
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-14]

2024-04-14T22:22:44Z: