@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-16T08:11:00Z",
+  "timestamp" : "2024-04-16T16:11:14Z",
   "count_outdated" : 1242,
   "uniques_outdated" : 780,
-  "count" : 1247,
-  "uniques" : 785,
+  "count" : 1249,
+  "uniques" : 786,
   "clones" : [
     {
       "timestamp": "2024-04-05T00:00:00Z",
@@ -43,12 +43,12 @@
     },
     {
       "timestamp": "2024-04-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
