@@ -1,5 +1,5 @@
 {
-  "count": 5,
+  "count": 7,
   "uniques": 4,
   "clones": [
     {
@@ -24,8 +24,8 @@
     },
     {
       "timestamp": "2024-04-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
