@@ -1,3 +1,12 @@
+2024-04-16T16:11:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8708949355 # 188
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
+* notice: last 14d: unq all: 4 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 785 1247
+* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 786 1249
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2024-04-16]
+
 2024-04-16T08:11:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8702173265 # 187
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
